# invoice_extractor

./: .gitignore  Dockerfile  app.py  main.py  pyproject.toml  readme.md  requirements.txt
config/: items_to_find.json  key_words.json
facturas/: config.py  model.py  utils.py
