[project]
name = "invoice-extractor"
version = "0.1.0"
description = "Extract pdf invoice data to csv format"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "docling>=2.43.0",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.29",
    "notebook>=7.4.5",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pdf2image>=1.17.0",
    "streamlit>=1.48.0",
    "transformers>=4.55.0",
]
